# ppy_webserver

./: CMakeLists.txt  README.md  py_webserver.c
config/: init.conf
examples/: core_part_test.cpp  echo_test.cpp
examples/HTML/: index.html
include/core/: application.hpp  connection.hpp  connection_manager.hpp  event_loop.hpp  http_parser.hpp  http_request.hpp  ppsever.hpp  web_server.hpp
py_tpool/: README.MD
py_tpool/core/: tpool.c
src/: main.cpp
src/core/: aplication.cpp  application.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  connection_pool.cpp  event_loop.cpp  event_loop.hpp  handler.cpp  handler.hpp  http_parser.cpp  http_parser.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  main.cpp  ppwebsever.cpp  ppwebsever.hpp  py_webserver.c  thread_pool.cpp  thread_pool.hpp  web_server.cpp  web_server.hpp
src/pool/connection_pool/: connection_pool.hpp
src/pool/memory_pool/: memory_pool.cpp  memory_pool.hpp
src/pool/py_tpool/core/: thread_pool.c  thread_pool.h
src/pool/thread_pool/core/: thread_pool.hpp
tests/: HTTPClient.cpp  application.hpp
